--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
         </div>
     </div>
     <div class="card">
-        <div class="card box-card" id="right-one-two"></div>
+        <div class="card box-card" id="right-one-two">
+            <p class="card box-card card-txt">Floats<br/>
+                <a href="https://github.com/JeremiahNgige/float.git" title="Git repository"a>github</a>
+              </p>
+        </div>
     </div>
       </div>
    </div>
